Añadidas las rutas de associaciones en entity para poder agregar asociaciones desde entity. añadidas las asociaciones en el controlador de relaciones de entidad, añadido el array de asociaciones y sus metodos en entity.php, cambiado el to_string de association ya que estaba comentado y no mostraba correctamente los arrays de entidades. Añadidas las associaciones en las entidades del openapi.yaml
