# apiAnalesCiencia/src/Controller/Entity/EntityRelationsController.php
@@ -15,6 +15,7 @@ use Slim\Http\Response;
 use TDW\ACiencia\Controller\Element\ElementRelationsBaseController;
 use TDW\ACiencia\Controller\Person\PersonQueryController;
 use TDW\ACiencia\Controller\Product\ProductQueryController;
+use TDW\ACiencia\Controller\Association\AssociationQueryController; # añadido
 use TDW\ACiencia\Entity\Entity;
 
 /**
@@ -146,6 +147,54 @@ final class EntityRelationsController extends ElementRelationsBaseController
             $response,
             $args,
             ProductQueryController::getEntityClassName()
+        );
+    }
+
+    //AÑADIDA ASSOCIACIONES
+    /**
+     * Summary: GET /entities/{entityId}/associations
+     *
+     * @param Request $request
+     * @param Response $response
+     * @param array<string,mixed> $args
+     *
+     * @return Response
+     */
+    public function getAssociations(Request $request, Response $response, array $args): Response
+    {
+        //Entity --> associations
+        $entityId = $args[EntityQueryController::getEntityIdName()] ?? 0;
+        if ($entityId <= 0 || $entityId > 2147483647) {   // 404
+            return $this->getElements($request, $response, null, AssociationQueryController::getEntitiesTag(), []);
+        }
+        /** @var Entity|null $entity */
+        $entity = $this->entityManager
+            ->getRepository(EntityQueryController::getEntityClassName())
+            ->find($entityId);
+        
+        $associations = $entity?->getAssociations()->getValues() ?? [];
+
+        return $this->getElements($request, $response, $entity, AssociationQueryController::getEntitiesTag(), $associations);
+
+    }
+    /**
+     * PUT /entities/{entityId}/associations/add/{elementId}
+     * PUT /entities/{entityId}/associations/rem/{elementId}
+     *
+     * @param Request $request
+     * @param Response $response
+     * @param array<string,mixed> $args
+     *
+     * @return Response
+     * @throws ORM\Exception\ORMException
+     */
+    public function operationAssociation(Request $request, Response $response, array $args): Response
+    {
+        return $this->operationRelatedElements(
+            $request,
+            $response,
+            $args,
+            AssociationQueryController::getEntityClassName()
         );
     }
 }
